--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,14 @@ Imports: shiny, Biobase, GenomicRanges, Gviz, RColorBrewer, ggbio,
         httr, grid, GO.db, ggdendro, plyr, gridSVG, XML
 Depends: R (>= 2.10), methods, BiocGenerics
 Suggests: RUnit, hgu95av2.db
-Description: The interactiveDisplay package contains the methods needed to generated
-    interactive Shiny based display methods for Bioconductor objects.
+Description: The interactiveDisplay package contains the methods needed to
+        generate interactive Shiny based display methods for Bioconductor 
+        objects.
 License: Artistic-2.0
 biocViews: GO GeneExpression Microarray Sequencing Classification
         Networks QualityControl Visualization NetworkVisualization
         Genetics DataRepresentation GUI AnnotationData
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R' 'GRangesList.R'
-        'SummarizedExperiment.R' 'test_interactiveDisplay_package.R' 'gridsvgjs.R'
+        'SummarizedExperiment.R' 'test_interactiveDisplay_package.R' 
+        'gridsvgjs.R'
 VignetteBuilder: knitr
