--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 0.99.13
+Version: 0.99.14
 Date: 2013-10-09
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
@@ -10,7 +10,7 @@ Imports: shiny, Biobase, GenomicRanges, Gviz, RColorBrewer, ggbio,
         ggplot2, reshape2, rtracklayer, AnnotationDbi, AnnotationHub,
         httr, grid, GO.db, ggdendro, plyr, gridSVG, XML
 Depends: R (>= 2.10), methods, BiocGenerics
-Suggests: RUnit, hgu95av2.db
+Suggests: RUnit, hgu95av2.db, knitr
 Description: The interactiveDisplay package contains the methods needed to
         generate interactive Shiny based display methods for Bioconductor 
         objects.
