--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,16 @@
 #importFrom(grid, grid.newpage, upViewport)
 #importFrom(GenomicRanges, seqnames,rowData,mcols,'seqlevels<-')
 
+import(methods)
+import(BiocGenerics)
 importFrom(ggplot2,ggplot,aes,geom_tile,coord_fixed,scale_fill_gradientn,
            scale_x_discrete,scale_y_discrete,coord_equal,theme_bw,theme,
            element_blank,element_text,xlab,ylab,ggtitle)
 
 import(GenomicRanges)
+importFrom(gridSVG, grid.export)
 importFrom(reshape2,melt)
-importFrom(shiny,bootstrapPage,tagList,singleton,h3,conditionalPanel,img,br,
-           sidebarPanel,uiOutput,HTML,actionButton,mainPanel,runApp,tableOutput,
-           selectInput,sliderInput,numericInput,radioButtons,includeHTML,
-           tabsetPanel,tabPanel,plotOutput)
+import(shiny)
 
 importFrom(plyr,ldply)
 importFrom(grid, convertUnit)
