Removed non-essential files and dead-end code, mostly from misc.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@81391 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,8 @@ Version: 0.99.14
 Date: 2013-10-09
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
-Imports: shiny, Biobase, GenomicRanges, Gviz, RColorBrewer, ggbio,
-        ggplot2, reshape2, rtracklayer, AnnotationDbi, AnnotationHub,
-        httr, grid, GO.db, ggdendro, plyr, gridSVG, XML
+Imports: shiny, GenomicRanges, Gviz, RColorBrewer, ggplot2, reshape2,
+        rtracklayer, grid, GO.db, plyr, gridSVG, XML
 Depends: R (>= 2.10), methods, BiocGenerics
 Suggests: RUnit, hgu95av2.db, knitr
 Description: The interactiveDisplay package contains the methods needed to
