--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 0.99.16
+Version: 0.99.17
 Date: 2013-10-09
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
 Imports: shiny, GenomicRanges, Gviz, RColorBrewer, ggplot2, reshape2,
-        rtracklayer, grid, GO.db, plyr, gridSVG, XML
-Depends: R (>= 2.10), methods, BiocGenerics
+        rtracklayer, GO.db, plyr, gridSVG, XML
+Depends: R (>= 2.10), methods, BiocGenerics, grid
 Suggests: RUnit, hgu95av2.db, knitr
 Description: The interactiveDisplay package contains the methods needed to
         generate interactive Shiny based display methods for Bioconductor 
