Added the start of a circle plot tab to the GRanges method.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@83040 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ importFrom(gridSVG, grid.export)
 importFrom(reshape2,melt)
 import(shiny)
 
+import(ggbio)
+
 importFrom(plyr,ldply)
 importFrom(grid, convertUnit)
 importFrom(RColorBrewer,brewer.pal)
