Added shinyIncubator to imports.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@83091 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(reshape2,melt)
 import(shiny)
 
 import(ggbio)
+import(shinyIncubator)
 
 importFrom(plyr,ldply)
 importFrom(grid, convertUnit)
