Added the beginnings of a cluster-wide GO annotation tab in the ExpressionSet method; hypergeometric test.  The full GRanges table in the GRanges method can now have individual rows selected and saved to the console as a dataframe.  Coercion back to GRanges object coming.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@84027 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ importFrom(reshape2,melt)
 import(shiny)
 
 import(ggbio)
+import(Category)
+import(GOstats)
 #import(shinyIncubator)
 
 importFrom(plyr,ldply)
