--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.0.17
-Date: 2013-11-20
+Version: 1.0.18
+Date: 2013-12-08
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
 Imports: shiny, GenomicRanges, Gviz, RColorBrewer, ggplot2, reshape2,
-        rtracklayer, GO.db, plyr, gridSVG, XML, ggbio
+        rtracklayer, GO.db, plyr, gridSVG, XML, ggbio, Category, GOstats
 Depends: R (>= 2.10), methods, BiocGenerics, grid
 Suggests: RUnit, hgu95av2.db, knitr
 Description: The interactiveDisplay package contains the methods needed to
