Adds display method that returns subsetted data.frames.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@84058 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,5 @@ biocViews: GO GeneExpression Microarray Sequencing Classification
         Networks QualityControl Visualization NetworkVisualization
         Genetics DataRepresentation GUI AnnotationData
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R' 'GRangesList.R'
-        'SummarizedExperiment.R' 'gridsvgjs.R'
+        'SummarizedExperiment.R' 'gridsvgjs.R' 'dataframe.R'
 VignetteBuilder: knitr
