Adds export for generic.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@84418 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,5 +29,6 @@ importFrom(Gviz,ranges,IdeogramTrack,GenomeAxisTrack,AnnotationTrack,plotTracks)
 importFrom(rtracklayer, ucscGenomes)
 importFrom(XML,saveXML)
 
+export(display)
 exportMethods(display)
 exportMethods(gridsvgjs)
