--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,11 @@ Version: 1.0.23
 Date: 2013-12-09
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
-Imports: shiny, GenomicRanges, Gviz, RColorBrewer, ggplot2, reshape2,
-        rtracklayer, GO.db, plyr, gridSVG, XML, ggbio, Category, GOstats
+Imports: shiny, RColorBrewer, ggplot2, reshape2, 
+          plyr, gridSVG, XML, Category
 Depends: R (>= 2.10), methods, BiocGenerics, grid
-Suggests: RUnit, hgu95av2.db, knitr
+Suggests: RUnit, hgu95av2.db, knitr,GenomicRanges, GOstats,
+          ggbio, GO.db, Gviz, rtracklayer
 Description: The interactiveDisplay package contains the methods needed to
         generate interactive Shiny based display methods for Bioconductor 
         objects.
