Added bicgo.R and bicgo2.R, two experimental methods to explore biclustering and GO annotation.  Passthrough arguments added to gridsvgjs.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@85904 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.0.24
-Date: 2013-01-06
+Version: 1.0.25
+Date: 2013-01-29
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
 Imports: shiny, RColorBrewer, ggplot2, reshape2, 
@@ -19,5 +19,5 @@ biocViews: GO GeneExpression Microarray Sequencing Classification
         Networks QualityControl Visualization NetworkVisualization
         Genetics DataRepresentation GUI AnnotationData
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R' 'GRangesList.R'
-        'SummarizedExperiment.R' 'gridsvgjs.R' 'dataframe.R' 'zzz.R'
+        'SummarizedExperiment.R' 'gridsvgjs.R' 'dataframe.R' 'bicgo.R' 'bicgo2.R' 'zzz.R'
 VignetteBuilder: knitr
