Fixed bicgo2 exporting, datatables coloring, layout, saving, require() helper.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@86039 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,3 +32,5 @@ importFrom(XML,saveXML)
 export(display)
 exportMethods(display)
 exportMethods(gridsvgjs)
+exportMethods(bicgo)
+exportMethods(bicgo2)
