--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,9 @@ Description: The interactiveDisplay package contains the methods needed to
         generate interactive Shiny based display methods for Bioconductor 
         objects.
 License: Artistic-2.0
-biocViews: GO GeneExpression Microarray Sequencing Classification
-        Networks QualityControl Visualization NetworkVisualization
-        Genetics DataRepresentation GUI AnnotationData
+biocViews: GO, GeneExpression, Microarray, Sequencing, Classification,
+        Networks, QualityControl, Visualization, NetworkVisualization,
+        Genetics, DataRepresentation, GUI, AnnotationData,
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R' 'GRangesList.R'
         'SummarizedExperiment.R' 'gridsvgjs.R' 'dataframe.R' 'bicgo.R' 'bicgo2.R' 'zzz.R'
 VignetteBuilder: knitr
