--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,22 +2,23 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.0.30
+Version: 1.0.31
 Date: 2013-02-13
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
-Imports: shiny, RColorBrewer, ggplot2, reshape2, 
-          plyr, gridSVG, XML, Category
+Imports: shiny, RColorBrewer, ggplot2, reshape2, plyr, gridSVG, XML,
+        Category
 Depends: R (>= 2.10), methods, BiocGenerics, grid
-Suggests: RUnit, hgu95av2.db, knitr,GenomicRanges, GOstats,
-          ggbio, GO.db, Gviz, rtracklayer
-Description: The interactiveDisplay package contains the methods needed to
-        generate interactive Shiny based display methods for Bioconductor 
-        objects.
+Suggests: RUnit, hgu95av2.db, knitr,GenomicRanges, GOstats, ggbio,
+        GO.db, Gviz, rtracklayer
+Description: The interactiveDisplay package contains the methods needed
+        to generate interactive Shiny based display methods for
+        Bioconductor objects.
 License: Artistic-2.0
-biocViews: GO, GeneExpression, Microarray, Sequencing, Classification,
-        Networks, QualityControl, Visualization, NetworkVisualization,
-        Genetics, DataRepresentation, GUI, AnnotationData,
-Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R' 'GRangesList.R'
-        'SummarizedExperiment.R' 'gridsvgjs.R' 'dataframe.R' 'bicgo.R' 'bicgo2.R' 'zzz.R'
+Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R'
+        'GRangesList.R' 'SummarizedExperiment.R' 'gridsvgjs.R'
+        'dataframe.R' 'bicgo.R' 'bicgo2.R' 'zzz.R'
 VignetteBuilder: knitr
+biocViews: GO, GeneExpression, Microarray, Sequencing, Classification,
+        Network, QualityControl, Visualization, Visualization,
+        Genetics, DataRepresentation, GUI, AnnotationData
