First pass at fixing Bioconductor build system warnings.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@87758 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-#import(AnnotationDbi)
+import(AnnotationDbi)
 #import(AnnotationHub)
 #import(gridSVG)
 #importFrom(httr, content, GET)
@@ -33,4 +33,4 @@ export(display)
 exportMethods(display)
 exportMethods(gridsvgjs)
 exportMethods(bicgo)
-exportMethods(bicgo2)
+
