--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.1.31
-Date: 2013-02-13
+Version: 1.1.32
+Date: 2013-03-23
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
 Imports: shiny, RColorBrewer, ggplot2, reshape2, plyr, gridSVG, XML,
-        Category
+        Category, AnnotationDbi
 Depends: R (>= 2.10), methods, BiocGenerics, grid
 Suggests: RUnit, hgu95av2.db, knitr,GenomicRanges, GOstats, ggbio,
         GO.db, Gviz, rtracklayer
@@ -17,7 +17,7 @@ Description: The interactiveDisplay package contains the methods needed
 License: Artistic-2.0
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R'
         'GRangesList.R' 'SummarizedExperiment.R' 'gridsvgjs.R'
-        'dataframe.R' 'bicgo.R' 'bicgo2.R' 'zzz.R'
+        'dataframe.R' 'bicgo.R' 'zzz.R'
 VignetteBuilder: knitr
 biocViews: GO, GeneExpression, Microarray, Sequencing, Classification,
         Network, QualityControl, Visualization, Visualization,
