Added a little function gridtweak().  It may be removed later, but I personally find it convenient.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@89384 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,5 +32,6 @@ importFrom(XML,saveXML)
 export(display)
 exportMethods(display)
 exportMethods(gridsvgjs)
+exportMethods(gridtweak)
 exportMethods(bicgo)
 
