--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.3.1
-Date: 2013-04-21
+Version: 1.3.2
+Date: 2013-04-23
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
 Imports: shiny, RColorBrewer, ggplot2, reshape2, plyr, gridSVG, XML,
@@ -17,7 +17,7 @@ Description: The interactiveDisplay package contains the methods needed
 License: Artistic-2.0
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R'
         'GRangesList.R' 'SummarizedExperiment.R' 'gridsvgjs.R'
-        'dataframe.R' 'bicgo.R' 'zzz.R'
+        'dataframe.R' 'bicgo.R' 'gridtweak.R' 'zzz.R'
 VignetteBuilder: knitr
 biocViews: GO, GeneExpression, Microarray, Sequencing, Classification,
         Network, QualityControl, Visualization, Visualization,
