--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.3.5
+Version: 1.3.7
 Date: 2014-05-07
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
@@ -17,7 +17,7 @@ Description: The interactiveDisplay package contains the methods needed
 License: Artistic-2.0
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R'
         'GRangesList.R' 'SummarizedExperiment.R' 'gridsvgjs.R'
-        'dataframe.R' 'bicgo.R' 'gridtweak.R' 'zzz.R'
+        'dataframe.R' 'bicgo.R' 'gridtweak.R' 'simplenet.R' 'zzz.R'
 VignetteBuilder: knitr
 biocViews: GO, GeneExpression, Microarray, Sequencing, Classification,
         Network, QualityControl, Visualization, Visualization,
