--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,22 +2,23 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.3.8
-Date: 2014-05-08
+Version: 1.3.9
+Date: 2014-07-12
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
 Imports: shiny, RColorBrewer, ggplot2, reshape2, plyr, gridSVG, XML,
         Category, AnnotationDbi
 Depends: R (>= 2.10), methods, BiocGenerics, grid
 Suggests: RUnit, hgu95av2.db, knitr,GenomicRanges, GOstats, ggbio,
-        GO.db, Gviz, rtracklayer
+        GO.db, Gviz, rtracklayer, metagenomeSeq
 Description: The interactiveDisplay package contains the methods needed
         to generate interactive Shiny based display methods for
         Bioconductor objects.
 License: Artistic-2.0
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R'
         'GRangesList.R' 'SummarizedExperiment.R' 'gridsvgjs.R'
-        'dataframe.R' 'bicgo.R' 'gridtweak.R' 'simplenet.R' 'zzz.R'
+        'dataframe.R' 'bicgo.R' 'gridtweak.R' 'simplenet.R'
+        'MRexperiment.R' 'zzz.R'
 VignetteBuilder: knitr
 biocViews: GO, GeneExpression, Microarray, Sequencing, Classification,
         Network, QualityControl, Visualization, Visualization,
