--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.3.13
+Version: 1.3.14
 Date: 2014-09-04
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
-Imports: shiny, RColorBrewer, ggplot2, reshape2, plyr, gridSVG, XML,
+Imports: interactiveDisplayBase, shiny, RColorBrewer, ggplot2, reshape2, plyr, gridSVG, XML,
         Category, AnnotationDbi
 Depends: R (>= 2.10), methods, BiocGenerics, grid
 Suggests: RUnit, hgu95av2.db, knitr,GenomicRanges, GOstats, ggbio,
