--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: interactiveDisplay
 Type: Package
 Title: Package for enabling powerful shiny web displays of Bioconductor
         objects
-Version: 1.3.24
-Date: 2014-09-09
+Version: 1.3.25
+Date: 2014-09-10
 Author: Shawn Balcome, Marc Carlson
 Maintainer: Shawn Balcome <balc0022@umn.edu>
 Imports: interactiveDisplayBase, shiny, RColorBrewer, ggplot2, reshape2, plyr, gridSVG, XML,
@@ -18,7 +18,7 @@ License: Artistic-2.0
 Collate: 'interactiveDisplay.R' 'ExpressionSet.R' 'GRanges.R'
         'GRangesList.R' 'SummarizedExperiment.R' 'gridsvgjs.R'
         'bicgo.R' 'gridtweak.R' 'simplenet.R'
-        'MRexperiment.R' 'zzz.R'
+        'MRexperiment.R' 'altgr.R' 'zzz.R'
 VignetteBuilder: knitr
 biocViews: GO, GeneExpression, Microarray, Sequencing, Classification,
         Network, QualityControl, Visualization, Visualization,
